# contrextCue

./: .env.example  .gitignore
.github/workflows/: ci.yml
docs/: API.md  DevOps.md  Environment Setup.md
frontend/: eslint.config.js  package-lock.json  package.json
frontend/src/api-client/: api.ts  base.ts  common.ts  configuration.ts  index.ts
frontend/src/api-client/.openapi-generator/: FILES
frontend/src/api-client/api/: rewrite-api.ts  settings-api.ts  status-api.ts  transcribe-api.ts
frontend/src/api-client/models/: advanced-settings.ts  behaviors.ts  httpvalidation-error.ts  index.ts  llminfo.ts  mode.ts  rewrite-request.ts  rewrite-response.ts  settings-request.ts  settings-response.ts  status-response.ts  sttinfo.ts  transcribe-request.ts  transcribe-response.ts  validation-error-loc-inner.ts  validation-error.ts
project-instructions/: API.md  DevOps.md  Environment Setup.md  _Overview.md
scripts/: generate-openapi.sh
sidecar/: pyproject.toml
sidecar/scripts/: setup_ci.sh
sidecar/src/contrextcue_sidecar/: llm_runner.py  main.py  stt_runner.py
sidecar/src/contrextcue_sidecar/routers/: rewrite.py  settings.py  status.py  transcribe.py
sidecar/src/contrextcue_sidecar/schemas/: rewrite.py  settings.py  status.py  transcribe.py
src-tauri/: Cargo.toml
