[project]
name = "contrextcue-sidecar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi", "uvicorn", "whisper.cpp", "llama.cpp", "pyperclip", "pyautogui"
]

[tool.uv.scripts]
start = "uvicorn main:app --reload"
lint = "ruff ."
test = "pytest"
