[project]
name = "contrextcue_sidecar"
version = "0.1.0"
description = "ContrextCue is a lightweight, cross-platform desktop application for on-device text rewriting and speech-to-text transcription."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.12",
  "uvicorn>=0.34.1",
  "pyperclip>=1.9.0",
  "pynput>=1.8.1"
]

[project.optional-dependencies]
dev = [
  "ruff",
  "pytest>=8.0",
]

[project.scripts]
start = "contrextcue_sidecar.main:start"